# scuec-campus-mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mcp_client_test.py  pyproject.toml  server.py  test_server.py
static/: campus-map.css  campus-map.js  index.html
