[project]
name = "scuec-campus-mcp"
version = "1.0.0"
description = "中南民族大学校园百事通 MCP Server"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "uvicorn>=0.31.0",
]

[project.scripts]
scuec-campus-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
